test_translator/tests/data/checkpoint_2/core/fail/70_isclose_basic/solution.ts
export function approx(): number {
    return 3.2;  // Outside 0.01 of 3.14
}
